--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    
+    background-color: lightgray;
 }
 
 .input{
@@ -25,4 +25,30 @@ input[type="text"]{
 
 .display{
     text-align: center;
+}
+
+.locBtn{
+    display: inline-block;
+    font-size: 24px;
+    padding: 2px 0;
+    width: 21rem;
+    text-align: center;
+    margin-bottom: 6px;
+    color: rgb(26, 26, 26);
+    background: linear-gradient(90deg, rgb(18, 92, 255) 0%, rgb(0, 102, 255) 100%);
+    border-radius: 4px;
+}
+.locBtn:hover {
+    cursor: pointer;
+    transition: transform 150ms;
+    transform: scale(1.05);
+}
+
+.future {
+    border: solid #5B6DCD 10px;
+    margin: 10px;
+}
+
+.date {
+    font-size: 20px;
 }
